<resources>
    <string name="app_name">Flash Card</string>
    <string name="card_set">Card Sets</string>
    <string name="statistic">Statistics</string>
    <string name="setting">Settings</string>
    <string name="help">Help</string>
    <string name="support">Support</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="create_set">Create Flash Card Set</string>
    <string name="cancel_set">Cancel</string>
    <string name="ok">OK</string>

    <string name="data_unavailable_message">Database unavailable</string>
    <string name="data_empty">Data is empty</string>

    <string name="empty_set">This set is empty</string>
    <string name="add">Add</string>

    <string name="support_title">Support</string>
    <string name="support_use">Use App</string>
    <string name="support_community">Community</string>
    <string name="support_privacy">Privacy</string>

    <string name="help_title">Help </string>
    <string name="help_donate">Donate</string>
    <string name="help_rate">Rate</string>
    <string name="help_feedback">Feedback</string>

    <string name="create_card">Create Card</string>
    <string name="front">Front Text</string>
    <string name="back">Back Text</string>
    <string name="frontImage">Front Image</string>
    <string name="backImage">Back Image</string>
    <string name="frontSound">Front Sound</string>
    <string name="backSound">Back Sound</string>
    <string name="selectImage">Select Image</string>
    <string name="selectSound">Select Sound</string>

    <string name="learn_title">Learn</string>
    <string name="Check">Check</string>
    <string name="button_previous">Back</string>
    <string name="button_next">Next</string>

    <string name="menu_cardset_add_card">Add Flash Card</string>
    <string name="menu_cardset_see_all_card">See All Flash Card</string>
    <string name="menu_cardset_change_name">Change The Name Of Set</string>
    <string name="complete">Complete</string>
    <string name="menu_cardset_delete_set">Delete The Set</string>
    <string name="delete_set_completed">The Set was deleted</string>
    <string name="restore">Restore</string>
    <string name="want_to_delete">Do You Want To Delete?</string>

    <string name="label_update_card">Update Flash Card</string>

    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="appearance">Appearance</string>
    <string name="about">About</string>
    <string name="theme">Theme</string>
    <string name="background">Background</string>

    <string name="learned">Learned</string>
    <string name="not_learned">Not Learned</string>
    <string name="words">Words</string>

    <string name="log_in">Log In</string>
    <string name="user_name">User Name</string>
    <string name="user_password">User Password</string>
    <string name="dont_have_account">Dont Have Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="hello_user">Hello</string>
    <string name="account_exist">Account already exists</string>
</resources>