<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".method.CreateCardActivity">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar_create_card" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textStyle="bold"
        android:text="@string/front" />
        <ImageButton
            android:id="@+id/btnImageFrontUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_image"
            android:contentDescription="@string/selectImage" />
        <ImageButton
            android:id="@+id/btnSoundFrontUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_audio"
            android:contentDescription="@string/selectSound"/>
    </LinearLayout>
    <EditText
        android:id="@+id/front_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"/>

<!--    <ImageView-->
<!--        android:id="@+id/imageFrontView"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="200dp"-->
<!--        android:scaleType="centerCrop"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textStyle="bold"
        android:text="@string/back" />

        <ImageButton
            android:id="@+id/btnImageBackUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_image"
            android:contentDescription="@string/selectImage"/>

        <ImageButton
            android:id="@+id/btnSoundBackUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_audio"
            android:contentDescription="@string/selectImage"/>
    </LinearLayout>

    <EditText
        android:id="@+id/back_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"/>

</LinearLayout>
</ScrollView>